--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "check": "run-s lint typecheck",
     "clean": "rimraf .next",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx,css}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx,css}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx,css}\" --cache",
+    "clone-project": "C:\\Users\\immi\\AppData\\Local\\Programs\\Python\\Python311\\python.exe -u \"e:\\my programms\\clone copy project gitignore patterns new.py\" --src \"C:\\Users\\immi\\Desktop\\Code\\nextJs\\fluent-ui\" --dest \"C:\\Users\\immi\\Desktop\\Code\\nextJs\\windows-11\""
   },
   "dependencies": {
     "@iconify-icons/fluent": "^1.2.38",
@@ -26,17 +27,20 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.0.2",
     "date-fns": "^4.1.0",
     "emittor": "^0.2.0-beta.2",
     "framer-motion": "^11.15.0",
     "geist": "^1.3.0",
     "lenis": "^1.1.16",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.441.0",
     "next": "15.1.0",
@@ -47,16 +51,20 @@
     "react-icons": "5.3.0",
     "react-player": "^2.16.0",
     "react-resizable": "^3.0.5",
+    "react-resizable-layout": "^0.7.2",
     "react-resizable-panels": "^2.1.3",
+    "react-rnd": "^10.4.14",
     "shadcn-theme-editor": "^1.4.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-full-bleed": "^2.0.2",
     "type-fest": "^4.30.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/eslint": "^8.56.10",
+    "@types/lodash": "^4.17.14",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.14.10",
     "@types/react": "19.0.0",
@@ -76,6 +84,17 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-elevation": "^2.0.0",
     "typescript": "^5.5.3"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.37.0"
+  },
+  "packageManager": "pnpm@9.8.0",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.0.1",
+      "@types/react-dom": "19.0.2"
+    }
   }
 }
